# curand_contract_benchmark

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run_benchmark.py
contract_benchmark/: __init__.py  adapters.py  capabilities.py  curand_adapter.py  curand_constants.py  curand_ctypes.py  curand_generator.py  curand_library.py  curanddx_support.py  flagrand_adapter.py  generator_registry.py  kernels.py  native_cuda_paths.py  optional_curanddx_api.py  optional_device_api.py  profiles.py  records.py  reporting.py  runner.py  runtime_env.py  spec.py  summary.py  timing.py  validation.py
contract_benchmark/tasks/: __init__.py  bulk.py  common.py  curanddx.py  device.py  distribution_diagnostics.py  fused.py  gates.py  granularity.py  lifecycle.py  memory.py  qrng.py  robustness.py
contract_benchmark/tasks/distribution_diagnostics/: __init__.py  cases.py  records.py  runner.py  transforms.py
docs/: BENCHMARK_CODE_ARCHITECTURE.md  BENCHMARK_STRUCTURE_AND_IMPLEMENTATION.md  H20_CLUSTER_RUN_GUIDE.md
native/: build_curand_device_extension.py  build_curanddx_extension.py  curand_contract_device_ext.cu  curanddx_contract_ext.cu
scripts/: gate_smoke.sh  h20_benchmark.sh  h20_parallel_benchmark.py  h20_smoke.sh  h20_srun_docker.sh  record_gate_scope_smoke.py
src/flagrand/: __init__.py  _device.py
src/flagrand/fused/: __init__.py  lognormal.py  normal.py  poisson.py  raw.py  uniform.py
src/flagrand/rng/: __init__.py  _sequence.py  mrg32k3a.py  mt19937.py  mtgp32.py  philox.py  scrambled_sobol32.py  scrambled_sobol64.py  sobol32.py  sobol64.py  (+1 more)
(+7 files in other folders)
